--- a/next/package.json
+++ b/next/package.json
@@ -12,6 +12,7 @@
     "@sanity/client": "^6.21.3",
     "@sanity/image-url": "^1.0.2",
     "next": "14.2.5",
+    "next-sanity": "^9.4.5",
     "prettier": "^3.3.3",
     "react": "^18",
     "react-dom": "^18"
