--- a/sanity/package.json
+++ b/sanity/package.json
@@ -15,6 +15,7 @@
     "sanity"
   ],
   "dependencies": {
+    "@sanity-typed/types": "^6.3.6",
     "@sanity/vision": "^3.54.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,6 +23,7 @@
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
+    "@sanity/codegen": "^3.54.0",
     "@sanity/eslint-config-studio": "^4.0.0",
     "@types/react": "^18.0.25",
     "eslint": "^8.6.0",
