--- a/next/package.json
+++ b/next/package.json
@@ -6,16 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate": "sanity schema extract && sanity typegen generate"
   },
   "dependencies": {
     "@sanity/client": "^6.21.3",
     "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.54.0",
     "next": "14.2.5",
     "next-sanity": "^9.4.5",
     "prettier": "^3.3.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sanity": "^3.54.0"
   },
   "devDependencies": {
     "@types/node": "^20",
