--- a/next/package.json
+++ b/next/package.json
@@ -18,12 +18,17 @@
     "prettier": "^3.3.3",
     "react": "^18",
     "react-dom": "^18",
-    "sanity": "^3.54.0"
+    "react-icons": "^5.3.0",
+    "react-slick": "^0.30.2",
+    "sanity": "^3.54.0",
+    "sass": "^1.77.8",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
