--- a/next/package.json
+++ b/next/package.json
@@ -20,8 +20,10 @@
     "dotenv": "^16.4.5",
     "next": "14.2.5",
     "next-sanity": "^9.4.5",
+    "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-slick": "^0.30.2",
     "sanity": "^3.54.0",
@@ -30,6 +32,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
