--- a/next/package.json
+++ b/next/package.json
@@ -17,8 +17,9 @@
     "@sanity/client": "^6.21.3",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.54.0",
+    "@sendgrid/mail": "^8.1.3",
     "dotenv": "^16.4.5",
-    "next": "14.2.5",
+    "next": "^14.2.13",
     "next-sanity": "^9.4.5",
     "nodemailer": "^6.9.15",
     "react": "^18",
