--- a/next/vercel.json
+++ b/next/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/:path((?!military|!tech).*)",
-      "destination": "stagin-stagi-PbS4tzHUhUv5-1515294139.us-east-2.elb.amazonaws.com:path*"
+      "destination": "stagin-stagi-PbS4tzHUhUv5-1515294139.us-east-2.elb.amazonaws.com/:path*"
     }
   ]
 }
