--- a/tech/package.json
+++ b/tech/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -14,37 +15,37 @@
   },
   "dependencies": {
     "@portabletext/react": "^3.1.0",
-    "@sanity/client": "^6.21.3",
+    "@sanity/client": "^6.22.2",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/vision": "^3.54.0",
-    "@sendgrid/mail": "^8.1.3",
+    "@sanity/vision": "^3.62.2",
+    "@sendgrid/mail": "^8.1.4",
     "dotenv": "^16.4.5",
-    "next": "^14.2.13",
-    "next-sanity": "^9.4.5",
-    "nodemailer": "^6.9.15",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.53.0",
+    "next": "^15.0.1",
+    "next-sanity": "^9.8.8",
+    "nodemailer": "^6.9.16",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
     "react-slick": "^0.30.2",
-    "sanity": "^3.54.0",
-    "sass": "^1.77.8",
+    "sanity": "^3.62.2",
+    "sass": "^1.80.4",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/nodemailer": "^6.4.15",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^22.8.1",
+    "@types/nodemailer": "^6.4.16",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@types/react-slick": "^0.23.13",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5",
-    "fs": "^0.0.1-security",
-    "postcss": "^8",
+    "eslint": "^9.13.0",
+    "eslint-config-next": "15.0.1",
+    "fs": "0.0.1-security",
+    "postcss": "^8.4.47",
     "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.6",
-    "tailwindcss": "^3.4.1",
+    "prettier-plugin-tailwindcss": "^0.6.8",
+    "tailwindcss": "^3.4.14",
     "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "typescript": "^5.6.3"
   }
 }
