--- a/tech/package.json
+++ b/tech/package.json
@@ -14,6 +14,7 @@
     "migrate": "npm run build:migrate && node ./dist/app/data/migration/migrateInstructors.js"
   },
   "dependencies": {
+    "@mux/mux-player-react": "^3.4.0",
     "@portabletext/react": "^3.1.0",
     "@sanity/client": "^6.22.3",
     "@sanity/image-url": "^1.1.0",
@@ -29,6 +30,7 @@
     "react-icons": "^5.3.0",
     "react-slick": "^0.30.2",
     "sanity": "^3.63.0",
+    "sanity-plugin-mux-input": "^2.8.0",
     "sass": "^1.80.6",
     "slick-carousel": "^1.8.1"
   },
