--- a/tech/package.json
+++ b/tech/package.json
@@ -14,39 +14,40 @@
     "migrate": "npm run build:migrate && node ./dist/app/data/migration/migrateInstructors.js"
   },
   "dependencies": {
-    "@portabletext/react": "^3.1.0",
-    "@sanity/client": "^6.22.3",
+    "@portabletext/react": "^3.2.1",
+    "@sanity/client": "^7.4.0",
     "@sanity/image-url": "^1.1.0",
-    "@sanity/vision": "^3.63.0",
-    "@sendgrid/mail": "^8.1.4",
-    "dotenv": "^16.4.5",
-    "next": "^15.0.3",
-    "next-sanity": "^9.8.10",
-    "nodemailer": "^6.9.16",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.1",
-    "react-icons": "^5.3.0",
-    "react-slick": "^0.30.2",
-    "sanity": "^3.63.0",
-    "sass": "^1.80.6",
+    "@sanity/vision": "^3.90.0",
+    "@sendgrid/mail": "^8.1.5",
+    "dotenv": "^16.5.0",
+    "next": "^15.3.3",
+    "next-sanity": "^9.12.0",
+    "nodemailer": "^7.0.3",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.56.4",
+    "react-icons": "^5.5.0",
+    "react-slick": "^0.30.3",
+    "sanity": "^3.90.0",
+    "sass": "^1.89.1",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
-    "@types/node": "^22.9.0",
-    "@types/nodemailer": "^6.4.16",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@tailwindcss/postcss": "^4.1.8",
+    "@types/node": "^22.15.29",
+    "@types/nodemailer": "^6.4.17",
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.5",
     "@types/react-slick": "^0.23.13",
-    "eslint": "^9.14.0",
-    "eslint-config-next": "15.0.1",
+    "eslint": "^9.28.0",
+    "eslint-config-next": "15.3.3",
     "fs": "0.0.1-security",
-    "postcss": "^8.4.47",
-    "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.8",
-    "tailwindcss": "^3.4.14",
+    "postcss": "^8.5.4",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.12",
+    "tailwindcss": "^4.1.8",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.8.3"
   },
   "packageManager": "pnpm@10.6.3+sha512.bb45e34d50a9a76e858a95837301bfb6bd6d35aea2c5d52094fa497a467c43f5c440103ce2511e9e0a2f89c3d6071baac3358fc68ac6fb75e2ceb3d2736065e6"
 }
