--- a/military/package.json
+++ b/military/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "preinstall": "npx only-allow pnpm",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -15,16 +14,17 @@
   },
   "dependencies": {
     "@portabletext/react": "^3.1.0",
-    "@sanity/client": "^6.22.2",
+    "@sanity/client": "^7.6.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.62.3",
     "@sendgrid/mail": "^8.1.4",
+    "@tailwindcss/postcss": "^4.1.10",
     "dotenv": "^16.4.5",
     "next": "^15.0.2",
     "next-sanity": "^9.8.8",
-    "nodemailer": "^6.9.16",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "nodemailer": "^7.0.3",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
     "react-slick": "^0.30.2",
@@ -33,18 +33,18 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
-    "@types/node": "^22.8.6",
+    "@types/node": "^24.0.1",
     "@types/nodemailer": "^6.4.16",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@types/react-slick": "^0.23.13",
     "eslint": "^9.13.0",
-    "eslint-config-next": "15.0.1",
+    "eslint-config-next": "^15.3.3",
     "fs": "0.0.1-security",
-    "postcss": "^8.4.47",
+    "postcss": "^8.5.5",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
-    "tailwindcss": "^3.4.14",
+    "tailwindcss": "^4.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   }
