--- a/tech/package.json
+++ b/tech/package.json
@@ -19,17 +19,20 @@
     "@sanity/vision": "^4.21.1",
     "@sendgrid/mail": "^8.1.4",
     "dotenv": "^16.4.5",
-    "next": "^15.2.6",
+    "next": "^16.0.10",
     "next-sanity": "^11.6.10",
     "nodemailer": "^7.0.3",
-    "react": "^19.2.1",
-    "react-dom": "^19.2.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
     "react-slick": "^0.30.2",
     "sanity": "^4.21.1",
     "sass": "^1.80.6",
     "slick-carousel": "^1.8.1"
+  },
+  "overrides": {
+    "jsdom": "27.3.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.10",
